--- a/src/components/network/network.css
+++ b/src/components/network/network.css
@@ -18,6 +18,12 @@
     line-height: 1;
 }
 
+.safari .graph-title {
+    background: linear-gradient( #5ddcff, #3c67e3 43%, #4e00c2);
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+
 .graph-title-shadow{
     
     text-shadow: -1px -1px 10px #161618aa,
@@ -53,4 +59,12 @@
     text-decoration: underline;
     font-weight: bold;
     font-size: 1.1rem;
+}
+
+.safari_bg {
+    filter: contrast(10);
+    opacity: 0.2;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
