--- a/src/opening.css
+++ b/src/opening.css
@@ -65,6 +65,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    background-color: var(--app-background)
 }
 
 .card:hover, .card-content {
@@ -92,6 +93,10 @@
     animation: spin 2.5s linear infinite;
 }
 
+.safari .card::before { 
+    background-image: linear-gradient( #5ddcff, #3c67e3 43%, #4e00c2);
+}
+
 .card::after{
     position: absolute;
     content: "";
@@ -108,6 +113,10 @@
     opacity: 1;
     transition: opacity .5s;
     animation: spin 2.5s linear infinite;
+}
+
+.safari .card::after {
+    background-image: linear-gradient( #5ddcff, #3c67e3 43%, #4e00c2);
 }
 
 @keyframes spin {
